Fix: overly large image now won't overflow anymore

--- a/styles/site.css
+++ b/styles/site.css
@@ -53,6 +53,9 @@ article h5,
 article h6 {
     text-align: center;
 }
+article img {
+    max-width: 100%;
+}
 @supports (width: fit-content) {
     article h2,
     article h3,
